初步完成作业